# ChangeLog for dev-ruby/ruby-gd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gd/ChangeLog,v 1.21 2009/12/20 14:13:53 graaff Exp $

  20 Dec 2009; Hans de Graaff <graaff@gentoo.org> ruby-gd-0.7.4-r1.ebuild:
  Remove obsolete virtual/ruby dependency.

  22 Aug 2009; Alex Legler <a3li@gentoo.org> ruby-gd-0.7.4-r1.ebuild:
  Remove ruby16 and ruby19 from USE_RUBY.

  08 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  ruby-gd-0.7.4-r1.ebuild:
  Migrate to EAPI 2.

  16 Nov 2008; Hans de Graaff <graaff@gentoo.org>
  files/ruby-gd-0.7.4-fix-interlace.patch:
  Don't use absolute path names in patch

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org> -ruby-gd-0.7.4.ebuild,
  ruby-gd-0.7.4-r1.ebuild:
  Remove dependencies on virtual/x11, remove broken version.

  25 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-gd-0.7.4-r1.ebuild:
  stable x86, bug 181688

  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> ruby-gd-0.7.4-r1.ebuild:
  Marked stable on amd64 for bug #181688

  14 Jun 2007; Markus Rothe <corsair@gentoo.org> ruby-gd-0.7.4-r1.ebuild:
  Stable on ppc64; bug #181688

*ruby-gd-0.7.4-r1 (20 Apr 2007)

  20 Apr 2007; Hans de Graaff <graaff@gentoo.org>
  +files/ruby-gd-0.7.4-fix-interlace.patch, +ruby-gd-0.7.4-r1.ebuild:
  Fix segmentation fault for 64-bit arches, bug 166527.

  26 Mar 2007; Raúl Porcel <armin76@gentoo.org> ruby-gd-0.7.4.ebuild:
  Marking -ia64 wrt bug 166527

  12 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ruby-gd-0.7.4.ebuild:
  Fix quoting, fix local declaration of myconf, add a pkg_setup error if
  media-libs/gd is not compiled with png useflag enabled, rather than get the
  configure step failing.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> ruby-gd-0.7.4.ebuild:
  Mark 0.7.4 stable on ia64

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> ruby-gd-0.7.4.ebuild:
  Pinpoint virtual/x11 version to less than 7.
