@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX ruby-gd-0.7.4-fix-interlace.patch 203 RMD160 d6b2365ea6f435f566bfd35aa1e1fc4b32a680e0 SHA1 829fa85c38154566657abae9c86cbe4d123fd009 SHA256 4da7baca789f8a92ea55a1aafb067392070f8dbca6f601a64ce4f9814c453882
 DIST ruby-GD-0.7.4-1.tar.gz 38725 RMD160 a1d941cc44c22f25cff0ee964c8dcb6eb00f9749 SHA1 87ad45f8b224ab2abb87d289112a245f58b16218 SHA256 df08e3d3b34d9cfc68b01f11bd6f685b121ed27f41c1ab5663713cb3e0cdb84a
+DIST ruby-gd-0.8.0.gem 41984 RMD160 73369970a3ae17feda1b428c19e0bc8bb52d05dc SHA1 a38a2eaa786afd1ad1fe56961ff7168e8fab7996 SHA256 c2a3a1d2d490cd65392fc36f553a6708196df09d118fa36bc12c723d256f7864
 EBUILD ruby-gd-0.7.4-r1.ebuild 1328 RMD160 02e0fd7cd5a90af006997fb9a23e38b7ba6fdd6a SHA1 c20a9510393960c31c0dfb2061fae16d3cc74abc SHA256 2e0b995e3c7e675adc595f9a4064f4c22269a8270760faa84900b3c9db3e279b
-MISC ChangeLog 2867 RMD160 1656a423cf1acfcb2b8c597d2413efe60c799850 SHA1 92592789b277aeda70f36ea4b36a8d91f30b65f7 SHA256 ec70440681cc632361f58f46704e7f330804da68ca242b9595296f38b6195a03
+EBUILD ruby-gd-0.8.0.ebuild 1295 RMD160 537108508655ef6d4ec9ee4301c54fde0fd29558 SHA1 cd2dfae0478a5cfaf0a784fb792cc7470bbc72d0 SHA256 ab0e5cfc4984c0bf2da65fbd4293626fa118311558e9860e801ac45d00d96610
+MISC ChangeLog 3074 RMD160 67783dbf05bf0c44a2a8c0a99c2d3bb80d99fbdc SHA1 4d2e772859c880c080b13d65c8babb4b1f6f6d07 SHA256 de257b549375bc1deed1af2b672f78a7cc79b633d68e52b86fb2aaf7b2e831fe
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksuMScACgkQeM7EJeUH71N6/gCfX7UQOVJpvfYXiX0u1lJWcpe/
-4rMAoIZYFl8xWOjT64WySbA51sqFmPiO
-=3Mbi
+iEYEARECAAYFAktSACgACgkQeM7EJeUH71M/YwCfRG3XV/KJm/c0npxozWv+Sx1C
+XFUAn3GMgaSYZWm7TGcq//+ZT9BvX+63
+=sSnS
 -----END PGP SIGNATURE-----
